@@ -1,7 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-libcamelpop3includedir = $(privincludedir)/camel
-
 camel_provider_LTLIBRARIES = libcamelpop3.la
 camel_provider_DATA = libcamelpop3.urls
 
@@ -19,12 +17,11 @@ libcamelpop3_la_SOURCES = 			\
 	camel-pop3-stream.c			\
 	camel-pop3-store.c
 
-libcamelpop3include_HEADERS =			\
+noinst_HEADERS =			\
 	camel-pop3-engine.h			\
 	camel-pop3-folder.h			\
 	camel-pop3-stream.h			\
 	camel-pop3-store.h
-
 
 libcamelpop3_la_LDFLAGS = -avoid-version -module
 
